--- a/.github/workflows/surge_deploy.yaml
+++ b/.github/workflows/surge_deploy.yaml
@@ -1,12 +1,12 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Deploy React App
+name: React App Deploy to Surge
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,25 +18,21 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
+    - uses: actions/checkout@v3
+    
     - name: Install NodeJS
-      uses: actions/setup-node@v2-beta
-      with: 
-        node-version: 16
-        
-    - uses: borales/actions-yarn@v3.0.0
+      uses: actions/setup-node@v3
       with:
-        cmd: install # will run `yarn install` command
+        node-version: 16
+
+    - name: Install NPM
+      run: npm install      
         
     - name: Build React App
-      run: yarn build
-        
-    - name: Install Surge
-      run: npm install -global surge
+      run: npm run build
       
-    - name: Deplot to Surge
-      run: surge ./ bilalahmad_reactapp2022.surge.su --token ${{ secrets.SURGE_TOKEN }}
+    - name: Install Surge
+      run: npm install --global surge
 
-
+    - name: Deploy to Surge
+      run: surge ./build bilalahmad-basic-react-app.surge.su --token ${{ secrets.SURGE_TOKEN }}
