--- a/.github/workflows/surge_deploy.yaml
+++ b/.github/workflows/surge_deploy.yaml
@@ -35,4 +35,4 @@ jobs:
       run: npm install --global surge
 
     - name: Deploy to Surge
-      run: surge ./build bilalahmad-basic-react-app.surge.su --token ${{ secrets.SURGE_TOKEN }}
+      run: surge ./build bilalahmad-basic-react-app.surge.sh --token ${{ secrets.SURGE_TOKEN }}
