--- a/.github/workflows/Surge_deploy.yml
+++ b/.github/workflows/Surge_deploy.yml
@@ -5,6 +5,8 @@ name: React App Deploy to Surge
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
